GNOME Bugzilla – Bug 680145
Stored default settings are not applied when opening documents in /tmp
Last modified: 2012-08-07 13:48:48 UTC
Saving settings as default and restoring them works now fine for me, except when the document is stored in /tmp (e.g. pdfs opened from firefox). In this case only some settings are applied (like sizing_mode) and some not (like window-ratio, show-sidebar). Especially that the window ratio is not restored bugs me, since all temporary pdfs from firefox need to be resized to get them in a readable condition. This is on evince 3.4.0 with $ gsettings list-recursively org.gnome.Evince.Default org.gnome.Evince.Default continuous true org.gnome.Evince.Default dual-page false org.gnome.Evince.Default dual-page-odd-left false org.gnome.Evince.Default fullscreen false org.gnome.Evince.Default inverted-colors false org.gnome.Evince.Default show-sidebar true org.gnome.Evince.Default show-toolbar true org.gnome.Evince.Default sidebar-page 'thumbnails' org.gnome.Evince.Default sidebar-size 257 org.gnome.Evince.Default sizing-mode 'best-fit' org.gnome.Evince.Default window-ratio (1.6218487394957983, 1.2244655581947743)
Fixed in git master. Thanks for reporting.