shell: Create metadata object even for temp files

Metadata won't be saved in those cases, but default settings will
applied.

https://bugzilla.gnome.org/show_bug.cgi?id=680145